<resources>
    <string name="app_name">paper_root</string>
    <string name="action_settings">Settings</string>
    <string name="query_hint">Enter search query</string>
    <string name="search_button">Search</string>
    <string name="title_activity_article">ArticleActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="end_date">End Date</string>
    <string name="begin_date">Begin Date</string>
    <string name="sort_order">Sort Order</string>
    <string name="news_desk">News Desk</string>
    <string name="edit_begin_date">Edit Begin Date</string>
    <string name="edit_end_date">Edit End Date</string>
    <string name="submit">Submit</string>
    <string name="share">Share</string>
    <string name="clear_filters">Clear Filters</string>

    <string-array name="sort_array">
        <item>Newest</item>
        <item>Oldest</item>
    </string-array>

    <string-array name="news_desk_array">
        <item>All</item>
        <item>Obits</item>
        <item>Wireless Living</item>
        <item>Booming</item>
        <item>Teens</item>
        <item>Fashion &amp; Style</item>
    </string-array>
</resources>
